--- a/main.css
+++ b/main.css
@@ -1,3 +1,21 @@
 body {
 	background-color: hotpink;
 }
+
+
+section {
+	border: 5px dotted goldenrod;
+}
+
+#ugh-lauren {
+	background-color: red;
+}
+
+.instructor {
+	background-color: lightblue;
+}
+
+#ugh-lauren > h1 {
+	text-transform: uppercase;
+}
+
